syntax = "proto3";
package raviecommercetest.raviecommercetest;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "raviecommercetest/raviecommercetest/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "ravi-ecommerce-test/x/raviecommercetest/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ravi-ecommerce-test/raviecommercetest/params";
  }
  // Queries a list of ProductPrice items.
	rpc ProductPrice(QueryProductPriceRequest) returns (QueryProductPriceResponse) {
		option (google.api.http).get = "/ravi-ecommerce-test/raviecommercetest/product_price";
	}

// Queries a list of ProductPrice items.
	rpc ProductPrice(QueryProductPriceRequest) returns (QueryProductPriceResponse) {
		option (google.api.http).get = "/ravi-ecommerce-test/raviecommercetest/product_price";
	}

// Queries a list of ProductPrice items.
	rpc ProductPrice(QueryProductPriceRequest) returns (QueryProductPriceResponse) {
		option (google.api.http).get = "/ravi-ecommerce-test/raviecommercetest/product_price";
	}

// Queries a list of Posts items.
	rpc Posts(QueryPostsRequest) returns (QueryPostsResponse) {
		option (google.api.http).get = "/ravi-ecommerce-test/raviecommercetest/posts";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryProductPriceRequest {
}

message QueryProductPriceResponse {
  string productImage = 1;
}

message QueryProductPriceRequest {
}

message QueryProductPriceResponse {
  string productImage = 1;
}

message QueryProductPriceRequest {
}

message QueryProductPriceResponse {
  string productImage = 1;
}

message QueryPostsRequest {
}

message QueryPostsResponse {
  string productImage = 1;
  string productPrice = 2;
}

// this line is used by starport scaffolding # 3
